hphp/hack/test/typecheck/reactive/memoize_mutable1.php.exp
File "memoize_mutable1.php", line 10, characters 12-29:
Memoized functions cannot have mutable parameters. (Parsing[1002])
